# miniDSP-Linux

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cliff.toml  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup-windows.bat  sitemap.xml
analysis/: analyze-tool.md  dsp-408-ui-summary.md  extract_gain_commands.py  extract_hid.py  feature-list.md  hid_packets.txt  miniDSP USBTree output.txt  miniDSP current settings 260409.unt  miniDSP current settings.unt  protocol.md  t-racks-dsp-4x4-research.md
analysis/resources/: screenshots.md
analysis/usb_captures/: capture_20260405_000924_input_channel_phase_invert.pcapng  capture_20260405_000924_input_channel_phase_invert.pcapng.meta.toml  capture_20260405_003445_output_channel_phase_invert.pcapng  capture_20260405_003445_output_channel_phase_invert.pcapng.meta.toml  capture_20260405_010105_input_channel_gate_threshold.pcapng  capture_20260405_010105_input_channel_gate_threshold.pcapng.meta.toml  capture_20260405_010105_output_channel_gate_threshold.pcapng.meta.toml  capture_20260405_010241_input_channel_gate_attack.pcapng  capture_20260405_010241_input_channel_gate_attack.pcapng.meta.toml  capture_20260405_010241_output_channel_gate_attack.pcapng.meta.toml  capture_20260405_010538_input_channel_gate_hold.pcapng  capture_20260405_010538_input_channel_gate_hold.pcapng.meta.toml  capture_20260405_010538_output_channel_gate_hold.pcapng.meta.toml  capture_20260405_010640_input_channel_gate_release.pcapng  capture_20260405_010640_input_channel_gate_release.pcapng.meta.toml  capture_20260405_010640_output_channel_gate_release.pcapng.meta.toml  capture_20260405_011619_output_channel_gate_threshold_2.pcapng  (+118 more)
api/: index.html
changelog/: index.html
development/: index.html
docs/: development.md  dspanalyze-usage.md  feature-list.md  gen_ref_pages.py  protocol.md
dspanalyze/: USAGE.md  __init__.py  __main__.py  calibrate.py  capture.py  check.py  cli.py  config.py  decode.py  diff_config.py  extract_defaults.py  metadata.py  protocol_config.toml
dspanalyze-usage/: index.html
feature-list/: index.html
minidsp/: __init__.py  __main__.py  calibration.toml  cli.py  defaults.py  device.py  factory_defaults.toml  protocol.py
protocol/: index.html
scripts/: publish.sh  release.sh  version.sh
search/: search_index.json
tests/: test_protocol.py
usage/: index.html
(+35 files in other folders)
