[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minidsp-linux"
version = "0.1.0"
description = "USB HID control and protocol analysis for the t.racks DSP 4x4 Mini"
requires-python = ">=3.11"
dependencies = [
    "tomli-w>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.2",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[project.scripts]
minidsp = "minidsp.cli:main"
dspanalyze = "dspanalyze.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["minidsp", "dspanalyze"]

[tool.hatch.build.targets.wheel.force-include]
"minidsp/calibration.toml" = "minidsp/calibration.toml"
"minidsp/factory_defaults.toml" = "minidsp/factory_defaults.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
